--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
         </nav>
 
-        <div style="display: flex; gap: 1rem;">
+        <div id="tag-wrapper">
             <div id="tag-col-1" class="tag-col" style="flex: 0 0 16.667%; max-width: 16.667%;"></div>
             <div id="tag-col-2" class="tag-col" style="flex: 0 0 16.667%; max-width: 16.667%;"></div>
             <div class="col-md-4">
