Fix for projects grid

--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
         <br />
 
         <div id="projects-div">
-            <div id="websites" style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr));">
+            <div id="websites">
                 <div style="grid-column: 1 / -1;">
                     <h1>
                         <a class="btn btn-dark link-btn" style="margin: 0 0.5rem;" href="#websites">
@@ -107,7 +107,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="web-apps"style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr));">
+            <div id="web-apps">
                 <div style="grid-column: 1 / -1;">
                     <h1>
                         <a class="btn btn-dark link-btn" style="margin: 0 0.5rem;" href="#web-apps">
@@ -119,7 +119,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="chrome-extensions"style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr));">
+            <div id="chrome-extensions">
                 <div style="grid-column: 1 / -1;">
                     <h1>
                         <a class="btn btn-dark link-btn" style="margin: 0 0.5rem;" href="#chrome-extensions">
@@ -131,7 +131,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="art" style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr));">
+            <div id="art">
                 <div style="grid-column: 1 / -1;">
                     <h1>
                         <a class="btn btn-dark link-btn" style="margin: 0 0.5rem;" href="#art">
