Use font size classes

--- a/404.html
+++ b/404.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 
-<body style="font-size: 125%; text-align: center;">
+<body style="text-align: center;">
     <img width="128px" src="img/profile/3.png" draggable="false" />
-    <h1>404 Not Found &mdash; justingolden.me</h1>
+    <h1 style="margin-bottom: 1rem;">404 Not Found &mdash; justingolden.me</h1>
     <p>
         The requested resource was not found. Perhaps it was removed or you
         entered the wrong website address.
