--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         </div>
 
         <!-- Programmer. &nbsp; Writer. &nbsp; Graphic Designer. -->
-        <h5 id="subtitle" style="font-weight: 300; font-size: 1.25rem; margin: 1rem 0;"></h5>
+        <h5 id="subtitle" style="margin: 1rem 0;" class="text-lg"></h5>
         <div id="top-btns">
             <a href="mailto:justingolden@rgbstudios.org" target="_blank" class="btn btn-dark" style="margin: 0 0.5rem;" title="Email me at justingolden@rgbstudios.org">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
@@ -415,7 +415,7 @@
 
     </div>
     <div class="fade-in-text" style="text-align: left;">
-        <h3 style="font-size: 1.75rem;">About</h3>
+        <h3 class="text-2xl">About</h3>
         <p style="margin: 1rem 0;">
             I am a full stack web and mobile developer located in San
             Diego, CA. I graduated from San Diego State University with
@@ -427,7 +427,7 @@
             <a href="projects.html" class="a">projects</a>. You can contact me
             using the buttons above.
         </p>
-        <h3 style="font-size: 1.75rem;">Interests</h3>
+        <h3 class="text-2xl">Interests</h3>
         <p style="margin: 1rem 0;">
             I like to write, edit videos, and design logos, brand
             identity systems, and application mockups. I enjoy all
