Add many more projects
Yay, about time

--- a/projects.html
+++ b/projects.html
@@ -109,11 +109,14 @@
 
     <div class="container">
         <h3 style="padding: 1rem 0; border-top: 2px solid #eee">Projects</h3>
-        <p style="padding: 1rem 0; border-bottom: 2px solid #eee">
+        <p style="padding: 0.5rem 0;">
             Below you can browse some of my projects. For each project, I am
             the sole maintainer and creator for the application, as well as
             any promotional images, icons, assets, descriptions, and videos.
-            <b>Hover or click a project to get started.</b>
+            <b style="background-color: #91d8f7; padding: 0.125rem;">Hover or click a project to get started.</b>
+        </p>
+        <p style="padding: 0.5rem 0; border-bottom: 2px solid #eee">
+            I also maintain <a class="a" target="_blank" href="https://rgbstudios.org">rgbstudios.org</a>, <a class="a" target="_blank" href="https://desktopclock.app">desktopclock.app</a>, and have been working on <a class="a" target="_blank" href="https://elementscardgame.com">elementscardgame.com</a> recently. Most of the projects listed below I haven't touched in a while, but if there's something you enjoy or would like updated, feel free to reach out!
         </p>
         <div style="margin-top: 1rem;">
             <a class="a" style="margin-right: 1.5rem;" href="#websites">Websites</a>
